--- a/ERB/캐릭터관련/CHARA_STATUS.ERB
+++ b/ERB/캐릭터관련/CHARA_STATUS.ERB
@@ -3882,36 +3882,55 @@ FONTREGULAR
 ;전투용, 축적 피해량 표시
 ;여기에서 TCVARn:206(축적 피해량 한도치)의 값을 정한다
 @STATUS_PRINT_CHARGE
-FONTBOLD
-PRINT CHARGE.
-FONTITALIC
 
 ;소모도(체력+기력+{피로도*150})에 따라 한도치(%)가 변동된다
 ;소모도 100%~75%: 최대 체력의 120% || 소모도 74%~40%: 최대 체력의 100% || 소모도 39%~: 최대 체력의 80%
 SELECTCASE PERCENT_CAL_F(BASE:체력 + BASE:기력 + (CFLAG:99 * 150), MAXBASE:체력 + MAXBASE:기력)
 	CASE 0 TO 39
-		LOCAL = 80
+		LOCAL:0 = 80
 	CASE 40 TO 74
-		LOCAL = 100
+		LOCAL:0 = 100
 	CASEELSE
-		LOCAL = 120
+		LOCAL:0 = 120
 ENDSELECT
 
-TCVARn:206 = MAXBASE:체력 * LOCAL / 100
+TCVARn:206 = MAXBASE:체력 * LOCAL:0 / 100
 
-LOCAL:0 = PERCENT_CAL_F(TCVARn:205, TCVARn:206)
-IF LOCAL >= TCVARn:206 + 20
-	SETCOLOR 255, 255, 0
-ELSEIF LOCAL >= TCVARn:206
-	SETCOLOR 255, 123, 0
+LOCAL:1 = PERCENT_CAL_F(TCVARn:205, TCVARn:206)
+IF LOCAL:1 <= LOCAL:0
+	LOCAL:2 = 60
+	LOCAL:3 = 75
+	LOCAL:4 = 215
+ELSEIF INRANGE(LOCAL:1,LOCAL:0,LOCAL:0+20)
+	LOCAL:2 = 255
+	LOCAL:3 = 255
+	LOCAL:4 = 0
+ELSEIF INRANGE(LOCAL:1,LOCAL:0,LOCAL:0+40)
+	LOCAL:2 = 255
+	LOCAL:3 = 123
+	LOCAL:4 = 0
+ELSE
+	LOCAL:2 = 255
+	LOCAL:3 = 0
+	LOCAL:4 = 0
 ENDIF
 
+SIF LOCAL:1 > LOCAL:0
+	SETCOLOR LOCAL:2,LOCAL:3,LOCAL:4
+
+FONTBOLD
+PRINT CHARGE.
+FONTITALIC
+
 PRINTFORM %UNICODE(0x208D)%
-CALL COLOR_BAR(TCVARn:205, TCVARn:206, 20, 60, 75, 215, -160, 10, 18, 6, 2, UNICODE(0x25AE), UNICODE(0x25AE))
+CALL COLOR_BAR(TCVARn:205, TCVARn:206, 20, LOCAL:2, LOCAL:3, LOCAL:4, -160, 10, 18, 6, 2, UNICODE(0x25AE), UNICODE(0x25AE))
+SIF LOCAL:1 > LOCAL:0
+	SETCOLOR LOCAL:2,LOCAL:3,LOCAL:4
 PRINTFORM %UNICODE(0x208E)%
+
 FONTREGULAR
-RESETCOLOR
 PRINTFORM （{TCVARn:205, 5}/{TCVARn:206, 5}）
+RESETCOLOR
 
 
 @STATUS_PRINT_FEAT
