--- a/ERB/게임_내_전투처리/HANGEKI_STYLE.ERB
+++ b/ERB/게임_내_전투처리/HANGEKI_STYLE.ERB
@@ -5,7 +5,7 @@
 
 ;공격 범위로부터 벗어나 있었으면 반격 실패 (예를 들어 중거리에 있었는데 근,원 공격이 오면 반격 실패)
 ;단, 에어 스트라이크로 피했을 경우는 반격 성공으로 판정한다
-SIF ARG:1 == 2 && GETBIT(TCVARn:216, 1) == 0
+SIF ARG:1 == 2 && GETBIT(TCVARn:216, 1) == 0 && ((TCVARn:0 == 1 && GETBIT(TFLAG:11, 0) == 0) || (TCVARn:0 == 2 && GETBIT(TFLAG:11, 1) == 0) || (TCVARn:0 == 3 && GETBIT(TFLAG:11, 2) == 0))
     RETURN 0
     
 ;강화 반격이 성공했을 경우 "절대 방어(피해 면역)" 와 함께 확정 반격 성공 판정
