마조기질 효과 지문 추가

--- a/ERB/게임_내_전투처리/ENEMY_ACTION.ERB
+++ b/ERB/게임_내_전투처리/ENEMY_ACTION.ERB
@@ -1026,6 +1026,7 @@ IF TCVARn:0 > 0
 		LOCAL:6 = 50 * ABL:마조끼
 		SIF ABL:마조끼 == 0
 			LOCAL:6 = 50
+		PRINTL ＥＸ게이지가 소량 증가하였다！
 		TCVARn:6 += MIN(MAX(RAND:(LOCAL:2 / 10),50),LOCAL:6)
 
 		;욕정이 미량으로 증가
