--- a/ERB/캐릭터관련/CHARA_STATUS.ERB
+++ b/ERB/캐릭터관련/CHARA_STATUS.ERB
@@ -631,7 +631,7 @@ CASE 5
 			SETCOLOR 128,128,128
 		PRINTL 　　　　　　　　　　　　　　　　　　　　　[20]　설정
 		RESETCOLOR
-	ELSEIF LOCAL:0 == 1
+	ELSEIF GETBIT(LOCAL:0, 0)
 		PRINTL 　　　　　　　　　　　＜＜변신 시＞＞
 		PRINT 　헤어 스타일　　　　　　　　　　　 
 		PRINTFORML %MAXBASE:ARG:나이 != BASE:ARG:실제나이 ? "실" # "　"%나이：{BASE:ARG:실제나이, 7} 세
@@ -737,7 +737,7 @@ CASE 5
 		RESETCOLOR
 		PRINT ]
 		PRINTL 
-		PRINTL 　　　　　　　　　　　　　　　　　　　　　[10]　평상시
+		PRINTL 　　　　　　　　　　　　　　　　　　　　　[11]　평상시
 		SIF FLAG:700 > 0
 			SETCOLOR 128,128,128
 		PRINTL 　　　　　　　　　　　　　　　　　　　　　[20]　재설정
@@ -848,7 +848,7 @@ CASE 5
 			PRINT 　　　　　　　　　　　[20]　재설정
 		PRINTL 
 		SIF TALENT:ARG:변신능력 > 0
-		PRINT 　　　　　　　　　　　　　　　　　　　　　[10]　변신 시
+			PRINT 　　　　　　　　　　　　　　　　　　　　　[10]　변신 시
 		PRINTL 
 		SIF FLAG:700 > 0
 			SETCOLOR 128,128,128
@@ -930,7 +930,10 @@ CASE 5
 		PAGE=RESULT/1000
 		GOTO REPRINT
 	ELSEIF RESULT == 10 && TALENT:ARG:변신능력 == 1
-		INVERTBIT LOCAL:0, 0
+		SETBIT LOCAL:0, 0
+		GOTO REPRINT
+	ELSEIF RESULT == 11 && TALENT:ARG:변신능력 == 1
+		CLEARBIT LOCAL:0, 0
 		GOTO REPRINT
 	ELSEIF RESULT == 20 && FLAG:700 == 0
 		;쓰리 사이즈 등 설정
@@ -1149,7 +1152,10 @@ IF ARG:1 == 0
 				CALLFORM COLORSENTENCE_MINIBAR(BASENAME:2, BASE:CCOUNT:성내성, MAXBASE:CCOUNT:성내성, 4, LOCALS, LOCAL:120)
 
 
-
+				;월경 사이클
+				CALL PRINT_ESTRUS_CYCLE(CCOUNT)
+				SIF CFLAG:15 > 0
+					PRINTFORM [우울]
 				IF CFLAG:CCOUNT:99 < 20
 					SETCOLOR 50, 255, 90
 				ELSEIF CFLAG:CCOUNT:99 < 50
@@ -1157,10 +1163,6 @@ IF ARG:1 == 0
 				ELSE
 					SETCOLOR 30, 102, 36
 				ENDIF
-				;월경 사이클
-				CALL PRINT_ESTRUS_CYCLE(CCOUNT)
-				SIF CFLAG:15 > 0
-					PRINTFORM [우울]
 				SIF CFLAG:CCOUNT:99
 					PRINTFORM [피로 {CFLAG:CCOUNT:99}]
 				SETCOLOR 255,60,255
@@ -1224,6 +1226,10 @@ IF ARG:1 == 0
 				CALLFORM COLORSENTENCE_MINIBAR(BASENAME:1, BASE:CCOUNT:기력, MAXBASE:CCOUNT:기력, 4, LOCALS, LOCAL:110)
 				CALLFORM COLORSENTENCE_MINIBAR(BASENAME:2, BASE:CCOUNT:성내성, MAXBASE:CCOUNT:성내성, 4, LOCALS, 0)
 
+				;월경 사이클
+				CALL PRINT_ESTRUS_CYCLE(CCOUNT)
+				SIF CFLAG:15 > 0
+					PRINTFORM [우울]
 				IF CFLAG:CCOUNT:99 < 20
 					SETCOLOR 50, 255, 90
 				ELSEIF CFLAG:CCOUNT:99 < 50
@@ -1231,10 +1237,6 @@ IF ARG:1 == 0
 				ELSE
 					SETCOLOR 30, 102, 36
 				ENDIF
-				;월경 사이클
-				CALL PRINT_ESTRUS_CYCLE(CCOUNT)
-				SIF CFLAG:15 > 0
-					PRINTFORM [우울]
 				SIF CFLAG:CCOUNT:99
 					PRINTFORM [피로 {CFLAG:CCOUNT:99}]
 				SETCOLOR 255,60,255
