--- a/ERB/SYSTEM/캐릭터_메이킹_관련/CHARA_MAKE_DEFAULT.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/CHARA_MAKE_DEFAULT.ERB
@@ -891,34 +891,38 @@ NEXT
 	;공통 설정으로부터의 로드, 범용 캐릭터용
 	IF CSTR:SELECT:0 == "" && TALENT:SELECT:변신능력 == 1
 		;공통 윗구 ("매지컬 나이트" 할 때 매지컬 부분)
-		LOCALS=%SAVESTR:11%
+		LOCALS = %SAVESTR:11%
 		;아랫구 장르 ("매지컬 나이트" 할 때 나이트 부분)
-		LOCALS:1=%CALLNAME:SELECT%
-		LOCAL:10=0
+		LOCALS:1 = %CALLNAME:SELECT%
+		LOCAL:10 = 0
 		$NAMEFROMGENRE_1
-		IF FLAG:820>0
+		IF FLAG:820 > 0
 			CALL RANDOMNAMING_FROMGENRE(FLAG:820)
-			LOCALS:1=%RESULTS%
+			LOCALS:1 = %RESULTS%
 		ENDIF
-		IF LOCALS+LOCALS:1!=""
-			CSTR:SELECT:0 = %LOCALS%%LOCALS:1%
+		IF LOCALS + LOCALS:1 != ""
+			;변신 후 이름
+			CSTR:SELECT:0 = %LOCALS% %LOCALS:1%
+			CSTR:SELECT:201 = %LOCALS%
+			CSTR:SELECT:202 = %LOCALS:1%
 
 			;장르 지정으로부터의 생성이라면 다른 캐릭터와의 중복은 피하고자 한다
-			IF FLAG:820>0
+			IF FLAG:820 > 0
 				FOR LOCAL, 1, CHARANUM
-					SIF LOCAL==SELECT
+					SIF LOCAL == SELECT
 						CONTINUE
-					IF CSTR:SELECT:0==CSTR:LOCAL:0 && LOCAL:10<10
-						LOCAL:10++
+					IF CSTR:SELECT:0 == CSTR:LOCAL:0 && LOCAL:10 < 10
+						LOCAL:10 ++
 						GOTO NAMEFROMGENRE_1
 					ENDIF
 				NEXT
 			ENDIF
 
 			CFLAG:SELECT:2 = 1
-			IF CSTR:SELECT:3==""
+			;자칭
+			IF CSTR:SELECT:3 == ""
 				CALL SEIKAKU_CHECK, "GET_TALENT_VALUE", SELECT
-				CSTR:SELECT:3=%SAVESTR:10%%CSTR:SELECT:0%%FIRSTSETTING_CHANGINGCALL_DETAIL(SELECT,RESULT)%
+				CSTR:SELECT:3 = %SAVESTR:10% %CSTR:SELECT:0% %FIRSTSETTING_CHANGINGCALL_DETAIL(SELECT,RESULT)%
 				CFLAG:SELECT:5 = 1
 			ENDIF
 		ENDIF
