--- a/ERB/SYSTEM/캐릭터_메이킹_관련/CHARA_SIZE.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/CHARA_SIZE.ERB
@@ -367,7 +367,7 @@ ELSE
 ENDIF
 최소치 = MAX(최소치 - 75 * MAX(15 - 나이치, 0) / 15, 0)
 최대치 = MAX(최대치 - 75 * MAX(15 - 나이치, 0) / 15, 0)
-사이즈치 = 사이즈치 * (난수치:3 + 50) / 50 + 영향치
+사이즈치 = 사이즈치 * (난수치:3 + 50) / 50 + 영향치 + TALENT:대상캐릭터:팽유개조치
 ;소질 보정
 사이즈치 = 사이즈치 * (100 + CHARATALENT_F(대상캐릭터,변신치,"포동포동") * 5) / 100
 사이즈치 = 사이즈치 * (100 + CHARATALENT_F(대상캐릭터,변신치,"왕뎅이") * 5) / 100
