--- a/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_人気投票.ERB
+++ b/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_人気投票.ERB
@@ -97,6 +97,7 @@ IF RAND:100 > FLAG:852 / 100
 			DATAFORM 首絞めックスで支配したい
 			DATAFORM 調教してペットにしたい
 			DATAFORM ペット扱いしてヤりたい
+			DATAFORM 強引にレイプされてほしい
 			ENDDATA
 			IF ABL:순종 > 4
 				順位 = ダントツ１位だった
