--- a/ERB/게임_내_전투처리/BATTLE_SHOW_STATUS.ERB
+++ b/ERB/게임_내_전투처리/BATTLE_SHOW_STATUS.ERB
@@ -165,7 +165,7 @@ ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 1
 	ELSEIF CFLAG:(FLAG:111):0 == 상태_흑화
 		;흑화 변신명이 설정되어 있다면 사용한다
 		IF CSTR:(FLAG:111):55 != ""
-			PRINTFORM %PRINT_TRANSNAME(FLAG:111)%
+			PRINTFORM 《%PRINT_TRANSNAME(FLAG:111)%》%NAME:(FLAG:111)%
 		ELSE
 			PRINT 흑화한
 			PRINTFORM  %PRINT_TRANSCALLNAME(FLAG:111)%
