--- a/ERB/무기및의상/의상관련/CLOTHDATA겉옷_변신전용.ERB
+++ b/ERB/무기및의상/의상관련/CLOTHDATA겉옷_변신전용.ERB
@@ -70,7 +70,7 @@ PRINTL 【 내구력 】─
 @CLOTH_DESCRIPTION_402
 PRINTL  가느다란 사슬이 몇 개나 이어진, 도저히 의복이라고는 부를 수 없는 물건.
 PRINTL  신체의 민감한 부분에 둘러쳐진 가시의 사슬이 성기로 변한 전신을 항상 발정 상태로 유지시킨다.
-PRINTL  착용자는 최하층 사회의 암캐보다도 천해 보인다.
+PRINTL  착용자는 최하층 사회의 암캐보다도 천하게 비쳐져, 육변기로서의 신분을 결코 의심받지 않을 것이다.
 PRINTL  당연하게도 삽입은 막을 수 없다.
 PRINTL 【  보정  】개조 슬롯：4　공격 1.5배　기력 감소량1.2배　노출도 높음（대）　속옷겸용
 PRINTL 【 내구력 】─
