--- a/＠중국판 역수입 작업(일어 미번 텍스트류)/SHOP_AMPUTEE.ERB
+++ b/＠중국판 역수입 작업(일어 미번 텍스트류)/SHOP_AMPUTEE.ERB
@@ -1,5 +1,5 @@
 ﻿
-;＠중국판より(翻訳未完了)
+;＠中国版より(翻訳未完了)
 ;欠損ヒロインの処分
 @AMPUTEE
 #DIM CCOUNT
@@ -9,25 +9,25 @@ LOCAL = CHARANUM
 FOR CCOUNT, 0, LOCAL
 	SIF CCOUNT == MASTER
 		CONTINUE
-IF CFLAG:CCOUNT:0 == 0 && TALENT:CCOUNT:사지결손 > 0 && TALENT:CCOUNT:理性喪失 < 1 && TALENT:CCOUNT:괴멸카운트 < 1
+IF CFLAG:CCOUNT:0 == 0 && TALENT:CCOUNT:四肢欠損 > 0 && TALENT:CCOUNT:理性喪失 < 1 && TALENT:CCOUNT:毀滅倒計時 < 1
 	PRINTFORM [{CCOUNT}] %CALLNAME:CCOUNT%
 	PRINTL 
 ENDIF
 NEXT
-PRINTFORML [999]選択を解除して돌아간다
+PRINTFORML [999]選択を解除して戻る
 $INPUT_LOOP_CHARA_LIST
 INPUT
 IF RESULT == 999
 	RETURN 999
 ELSEIF RESULT < 1 || RESULT >= LOCAL
-	PRINTL 올바른 값을 입력해 주십시오.
+	PRINTL 正しい値を入力してください
 	GOTO INPUT_LOOP_CHARA_LIST
 ELSE
 	TARGET = RESULT
 	PRINTFORML %CALLNAME:RESULT%をどのように「処理」しますか？
 	PRINTL [0] 裏組織に売却する（大金を受け取る）
-	PRINTL [1] 地下処刑ショーを手配する（大量の人気、資金、촉수의 조각を収穫する）
-	PRINTL [999] キャラクター選択に돌아간다
+	PRINTL [1] 地下処刑ショーを手配する（大量の人気、資金、触手の欠片を収穫する）
+	PRINTL [999] キャラクター選択に戻る
 	INPUT
 	$INPUT_AMPUTEE
 	IF RESULT == 0
@@ -37,7 +37,7 @@ ELSE
 	ELSEIF RESULT == 999
 		GOTO INPUT_LOOP_CHARA_LIST
 	ELSE
-		PRINTL 올바른 값을 입력해 주십시오.
+		PRINTL 正しい値を入力してください
 		GOTO INPUT_AMPUTEE
 	ENDIF
 ENDIF
@@ -49,14 +49,14 @@ PRINTDATAL
 	DATAFORM 「死なせてほしいって贅沢な願いだったんだね…」
 	DATAFORM 「こんな身体……%SELF_CALL()%、何に使われるんだろう……」
 	DATAFORM 「%SELF_CALL()%、どうしてあの時死ねなかったのかな…」
-	DATAFORM 「いっそ촉수に殺されるほうがハッピーエンドだったのかな…」
+	DATAFORM 「いっそ触手に殺されるほうがハッピーエンドだったのかな…」
 ENDDATA
-IF TALENT:TARGET:묘상화 > 0 || EXP:TARGET:출산경험 >= 10
+IF TALENT:TARGET:苗床化 > 0 || EXP:TARGET:出産経験 >= 10
 	PRINTDATAL
 		DATAFORM %PRINT_TRANSCALLNAME(TARGET)%には腕も足もなく、その体は醜い生産苗床と化しきっている。
 		DATAFORM 今の%PRINT_TRANSCALLNAME(TARGET)%には寝返り一つできず、敗北の瞬間で時間も止まってしまったようだ。
-		DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 腰を僅かにひねるのが精一杯で、自らの命を絶つことさえできない。
-		DATAFORM 数え切れない出産で伸びきった%PRINT_TRANSCALLNAME(TARGET)%의 腹部には、容姿に不釣り合いな醜い임신線が定着している。
+		DATAFORM %PRINT_TRANSCALLNAME(TARGET)%は腰を僅かにひねるのが精一杯で、自らの命を絶つことさえできない。
+		DATAFORM 数え切れない出産で伸びきった%PRINT_TRANSCALLNAME(TARGET)%の腹部には、容姿に不釣り合いな醜い妊娠線が定着している。
 		DATAFORM 開ききった%SLANG_V(TARGET)%からは怪しい体液が漏れ出ている。
 		DATAFORM 壊造された%SLANG_C(TARGET)%は、今や%SLANG_N(TARGET)%とほぼ同じ大きさだった。
 		DATAFORM %SLANG_N(TARGET)%からはまだ黄色っぽいドロドロの乳が分泌され、その体を濡らし続けている。
@@ -65,36 +65,36 @@ ELSE
 	PRINTDATAL
 		DATAFORM 手も足も喪い、その体は完全に性の捌け口となるための道具と化している。
 		DATAFORM 今の%PRINT_TRANSCALLNAME(TARGET)%には身動き一つできず、手足を切り落とされた瞬間で時間が止まってしまったようだ。
-		DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 腰を僅かにひねるのが精一杯で、自らの命を絶つことさえできない。
-		DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 四肢に幻痛を感じて苦しげに呻いていた。
+		DATAFORM %PRINT_TRANSCALLNAME(TARGET)%は腰を僅かにひねるのが精一杯で、自らの命を絶つことさえできない。
+		DATAFORM %PRINT_TRANSCALLNAME(TARGET)%は四肢に幻痛を感じて苦しげに呻いていた。
 		DATAFORM 二度と閉じない%SLANG_V(TARGET)%からは、惨めにも臭い体液が流れ出していた。
 		DATAFORM 壊造された%SLANG_C(TARGET)%は、今や%SLANG_N(TARGET)%とほぼ同じ大きさだった。
 		DATAFORM %SLANG_N(TARGET)%と%SLANG_C(TARGET)%は痛々しいほど赤く腫れ、溶接されたチェーンは癒着して除去も不可能だった。
 	ENDDATA
 ENDIF
 PRINTDATAW
-DATAFORM 「終わってしまった」%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、ぼんやりと窓の外を見つめていた……
-DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 天井を向かされたまま、枕を涙に濡らしてゆく……
-DATAFORM 自ら命も絶てない%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、ただ静かに泣いていた……
-DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 死んでいればよかったと心の底から思っていた……
-DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% ひたすらに無力な肉体を恨んでいた……
+DATAFORM 「終わってしまった」%PRINT_TRANSCALLNAME(TARGET)%は、ぼんやりと窓の外を見つめていた……
+DATAFORM %PRINT_TRANSCALLNAME(TARGET)%は天井を向かされたまま、枕を涙に濡らしてゆく……
+DATAFORM 自ら命も絶てない%PRINT_TRANSCALLNAME(TARGET)%は、ただ静かに泣いていた……
+DATAFORM %PRINT_TRANSCALLNAME(TARGET)%は死んでいればよかったと心の底から思っていた……
+DATAFORM %PRINT_TRANSCALLNAME(TARGET)%はひたすらに無力な肉体を恨んでいた……
 ENDDATA
 PRINTL ……どれくらい経ったか分からない……
-PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、ゆっくりと眠りにつく。
-PRINTW ————換気ダクトを通じて流れ込む촉수由来の睡眠ガスが、とても素晴らしく効いているようだった……
+PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%は、ゆっくりと眠りにつく。
+PRINTW ————換気ダクトを通じて流れ込む触手由来の睡眠ガスが、とても素晴らしく効いているようだった……
 PRINTL 
 PRINTFORML 「え、%PRINT_TRANSCALLNAME(TARGET)%さんですか？　つい先ほど医療仲介業者を通じて闇ルートに引き渡されましたよ」
-PRINTFORML 「%조사처리(PRINT_TRANSCALLNAME(TARGET),"가")% 何に使われるか？　知りませんね、どうせ性処理道具や装飾品あたりでしょう」
+PRINTFORML 「%PRINT_TRANSCALLNAME(TARGET)%が何に使われるか？　知りませんね、どうせ性処理道具や装飾品あたりでしょう」
 PRINTL 
 PRINTL 
 ;誘拐監禁
 CFLAG:TARGET:0 = 4
-LOCAL = (25000 + EXP:TARGET:매료경험 * 100 + EXP:TARGET:전투경험 * 100 + EXP:TARGET:고통쾌락경험 * 1000)
-IF EXP:TARGET:매료경험 > 100
-	PRINTFORML 「元」アイドルである%PRINT_TRANSCALLNAME(TARGET)%의 容姿は、取引相手にも好評だったようだ……
+LOCAL = (25000 + EXP:TARGET:魅了経験 * 100 + EXP:TARGET:戦闘経験 * 100 + EXP:TARGET:苦痛快楽経験 * 1000)
+IF EXP:TARGET:魅了経験 > 100
+	PRINTFORML 「元」アイドルである%PRINT_TRANSCALLNAME(TARGET)%の容姿は、取引相手にも好評だったようだ……
 ENDIF
 MONEY += LOCAL
-PRINTFORMW %PRINT_TRANSCALLNAME(TARGET)%의 対価として${LOCAL}の資金が集まりました!
+PRINTFORMW %PRINT_TRANSCALLNAME(TARGET)%の対価として${LOCAL}の資金が集まりました!
 PRINTW 
 
 
@@ -106,12 +106,12 @@ PRINTDATAL
 	DATAFORM 「………どうして……………」
 	DATAFORM 「なんで………………」
 ENDDATA
-IF TALENT:TARGET:묘상화 > 0 || EXP:TARGET:출산경험 >= 10
+IF TALENT:TARGET:苗床化 > 0 || EXP:TARGET:出産経験 >= 10
 	PRINTDATAL
 		DATAFORM %PRINT_TRANSCALLNAME(TARGET)%には腕も足もなく、その体は醜い生産苗床と化しきっている。
 		DATAFORM 今の%PRINT_TRANSCALLNAME(TARGET)%には寝返り一つできず、敗北の瞬間で時間も止まってしまったようだ。
-		DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%腰を僅かにひねるのが精一杯で、自らの命を絶つことさえできない。
-		DATAFORM 数え切れない出産で伸びきった%PRINT_TRANSCALLNAME(TARGET)%의 腹部には、容姿に不釣り合いな醜い임신線が定着している。
+		DATAFORM %PRINT_TRANSCALLNAME(TARGET)%は腰を僅かにひねるのが精一杯で、自らの命を絶つことさえできない。
+		DATAFORM 数え切れない出産で伸びきった%PRINT_TRANSCALLNAME(TARGET)%の腹部には、容姿に不釣り合いな醜い妊娠線が定着している。
 		DATAFORM 開ききった%SLANG_V(TARGET)%からは怪しい体液が漏れ出ている。
 		DATAFORM 壊造された%SLANG_C(TARGET)%は、今や%SLANG_N(TARGET)%とほぼ同じ大きさだった。
 		DATAFORM %SLANG_N(TARGET)%からはまだ黄色っぽいドロドロの乳が分泌され、その体を濡らし続けている。
@@ -120,65 +120,65 @@ ELSE
 	PRINTDATAL
 		DATAFORM 手も足も喪い、その体は完全に性の捌け口となるための道具と化している。
 		DATAFORM 今の%PRINT_TRANSCALLNAME(TARGET)%には身動き一つできず、手足を切り落とされた瞬間で時間が止まってしまったようだ。
-		DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 腰を僅かにひねるのが精一杯で、自らの命を絶つことさえできない。
-		DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 四肢に幻痛を感じて苦しげに呻いていた。
+		DATAFORM %PRINT_TRANSCALLNAME(TARGET)%は腰を僅かにひねるのが精一杯で、自らの命を絶つことさえできない。
+		DATAFORM %PRINT_TRANSCALLNAME(TARGET)%は四肢に幻痛を感じて苦しげに呻いていた。
 		DATAFORM 二度と閉じない%SLANG_V(TARGET)%からは、惨めにも臭い体液が流れ出していた。
 		DATAFORM 壊造された%SLANG_C(TARGET)%は、今や%SLANG_N(TARGET)%とほぼ同じ大きさだった。
 		DATAFORM %SLANG_N(TARGET)%と%SLANG_C(TARGET)%は痛々しいほど赤く腫れ、溶接されたチェーンは癒着して除去も不可能だった。
 	ENDDATA
 ENDIF
-PRINTFORML 部屋で無力に横たわっていた%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、「その」通知を受け取った。
-IF TALENT:TARGET:진지함 || TALENT:TARGET:고집쟁이 || TALENT:TARGET:츤데레 
-	PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 困惑した表情を浮かべた…。
+PRINTFORML 部屋で無力に横たわっていた%PRINT_TRANSCALLNAME(TARGET)%は、「その」通知を受け取った。
+IF TALENT:TARGET:真面目 || TALENT:TARGET:意地っ張り || TALENT:TARGET:ツンデレ 
+	PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%は困惑した表情を浮かべた…。
 	PRINTFORML「……分かりました…同意します…」
-ELSEIF TALENT:TARGET:冷酷 || TALENT:TARGET:坦率|| TALENT:TARGET:堅定 || TALENT:TARGET:고풍적
-	PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 強張った険しい表情のまま、一言も発さない……
-ELSEIF TALENT:TARGET:비관적 || TALENT:TARGET:胆怯 || TALENT:TARGET:害羞
-	PRINTFORML 절망的な表情で未来の運命を想像する%PRINT_TRANSCALLNAME(TARGET)%
-	PRINTFORML 공포で目が潤んでいる…
-ELSEIF TALENT:TARGET:과묵함 || TALENT:TARGET:三無
+ELSEIF TALENT:TARGET:冷酷 || TALENT:TARGET:坦率|| TALENT:TARGET:堅定 || TALENT:TARGET:古風
+	PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%は強張った険しい表情のまま、一言も発さない……
+ELSEIF TALENT:TARGET:悲観的 || TALENT:TARGET:胆怯 || TALENT:TARGET:害羞
+	PRINTFORML 絶望的な表情で未来の運命を想像する%PRINT_TRANSCALLNAME(TARGET)%
+	PRINTFORML 恐怖で目が潤んでいる…
+ELSEIF TALENT:TARGET:無口 || TALENT:TARGET:三無
 	PRINTFORML 無表情で「未来」を想像する%PRINT_TRANSCALLNAME(TARGET)%
 ELSEIF TALENT:TARGET:浮躁 || TALENT:TARGET:暴躁 || TALENT:TARGET:大方
 	PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%叫び、悪態をつき、必死に泣き喚いた
 	PRINTFORML しかし、最終的には決定に同意した……
-ELSEIF TALENT:TARGET:元氣 ||TALENT:TARGET:낙천적 || TALENT:TARGET:活潑 || TALENT:TARGET:얀데레
+ELSEIF TALENT:TARGET:元氣 ||TALENT:TARGET:楽天家 || TALENT:TARGET:活潑 || TALENT:TARGET:ヤンデレ
 	PRINTFORML 「やっとみんなの助けになれて、本当に嬉しいです…」
 	PRINTFORML 瞳には光が宿っていたが、不安な表情は隠せなかった……
-	SIF TALENT:TARGET:얀데레
+	SIF TALENT:TARGET:ヤンデレ
 		PRINTFORML 「%CSTR:20%……私のために泣いてくれるかな……」
 ELSE
 	PRINTFORML 無言で受け入れの表現を示した…
 ENDIF
 PRINTW 
 PRINTL 同時、
-IF TALENT:TARGET:촉수的俘虜 || TALENT:TARGET:徹底타락
-	PRINTFORML 「촉수様に体を捧げられないのが残念です…」
+IF TALENT:TARGET:触手的俘虜 || TALENT:TARGET:徹底堕落
+	PRINTFORML 「触手様に体を捧げられないのが残念です…」
 ELSEIF TALENT:TARGET:性奴体質 || ABL:TARGET:受虐狂 || TALENT:TARGET:抖Ｍ気質
 	PRINTFORML 「それでこの体はどうなるんだろう……ああ、ちょっと興奮してきた」
-ELSEIF ABL:TARGET:노출벽
+ELSEIF ABL:TARGET:露出癖
 	PRINTFORML 「こんなにたくさんの人の前だと……ああ……興奮しちゃう……」
 ELSE
 	PRINTFORML 「それまでどれだけ時間が残っているのか…」
 ENDIF
 
-SIF TALENT:TARGET:음란
+SIF TALENT:TARGET:淫乱
 	PRINTFORM 身体に生じた甘い痺れは、一向に治まらない……
-SIF TALENT:TARGET:음핵 || TALENT:TARGET:음유
+SIF TALENT:TARGET:淫核 || TALENT:TARGET:淫乳
 	PRINTFORM 敏感な先端部分が腫れて痛み、硬くなってゆく
-SIF TALENT:TARGET:음호 || TALENT:TARGET:음고
-	PRINTFORM 질は何度もひくひくと締め付けられ、
+SIF TALENT:TARGET:淫壷 || TALENT:TARGET:淫尻
+	PRINTFORM 膣は何度もひくひくと締め付けられ、
 PRINTL 
 SIF TALENT:TARGET:扶他 > 0
 	PRINTFORM 先走り液に混ざった精液は、少しずつ男根を濡らしていく。
-SIF TALENT:TARGET:모유체질
+SIF TALENT:TARGET:母乳体質
 	PRINTFORM 制御できない乳汁が溢れ出し、
 SIF TALENT:TARGET:漏尿癖
 	PRINTFORM ベッドは真新しい尿で濡れてしまっている。
 
 PRINTFORMW 「……%PRINT_TRANSCALLNAME(TARGET)%本人の身体は「準備」ができているようです。
 PRINTFORML 　次は企画に時間がかかりますが……」
-TALENT:TARGET:괴멸카운트 = 1
-PRINTFORML （処刑ショーは数日後に行われます。%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 病院特別病棟に一旦収容されました）
+TALENT:TARGET:毀滅倒計時 = 1
+PRINTFORML （処刑ショーは数日後に行われます。%PRINT_TRANSCALLNAME(TARGET)%は病院特別病棟に一旦収容されました）
 PRINTW ……
 TALENT:TARGET:破滅へのカウントダウン = 1
 PRINTFORML 
@@ -187,7 +187,7 @@ PRINTFORML
 #DIM LOCAL1
 #DIM LOCAL2
 DRAWLINE
-PRINTFORML 【魔法少女%PRINT_TRANSCALLNAME(TARGET)%의 特別処刑ショー】
+PRINTFORML 【魔法少女%PRINT_TRANSCALLNAME(TARGET)%の特別処刑ショー】
 PRINTL 
 PRINTFORML 上流階級だけが入れる秘密クラブの照明が暗くなり、
 PRINTFORMW 本日の処刑ショーの始まりを告げた。
@@ -195,25 +195,25 @@ FORCEWAIT
 PRINTL 
 PRINTFORML 会場の中央にスポットライトが当たる。
 PRINTFORML 木枠の上に、裸の女性の胴体が傾いており、
-PRINTFORML には手足がなく、乳首と클리토리스は太い鉄の鎖で締め付けられ、肌は艶めかしく輝いている。
-PRINTFORMW 感嘆の声が相次ぎ、人々の욕망の視線が“元”魔法少女の裸体に釘付けになる。
-PRINTFORM %PRINT_TRANSCALLNAME(TARGET)%
+PRINTFORML には手足がなく、乳首とクリトリスは太い鉄の鎖で締め付けられ、肌は艶めかしく輝いている。
+PRINTFORMW 感嘆の声が相次ぎ、人々の欲望の視線が“元”魔法少女の裸体に釘付けになる。
+PRINTFORM %PRINT_TRANSCALLNAME(TARGET)%は、
 IF TALENT:TARGET:認真 || TALENT:TARGET:倔強 || TALENT:TARGET:傲嬌 
 	PRINTFORML は、笑みを作りながら“魔法少女 %PRINT_TRANSFULLNAME(TARGET)%処刑ショー”の紹介を始めた。
-	PRINTFORML 「いつも魔法少女を応援していただきありがとうございます。仲間たちは必ず촉수を打ち倒します…」
-ELSEIF TALENT:TARGET:冷酷 || TALENT:TARGET:坦率|| TALENT:TARGET:堅定 || TALENT:TARGET:고풍적
+	PRINTFORML 「いつも魔法少女を応援していただきありがとうございます。仲間たちは必ず触手を打ち倒します…」
+ELSEIF TALENT:TARGET:冷酷 || TALENT:TARGET:坦率|| TALENT:TARGET:堅定 || TALENT:TARGET:古風
 	PRINTFORML は決然とした表情を浮かべ、黙ったままだった…。
-ELSEIF TALENT:TARGET:비관적 || TALENT:TARGET:胆怯 || TALENT:TARGET:害羞
+ELSEIF TALENT:TARGET:悲観的 || TALENT:TARGET:胆怯 || TALENT:TARGET:害羞
 	PRINTFORML の目には涙があふれていましたが、なんとか平静を保っていました。
 	PRINTFORML 「%SELF_CALL(TARGET)%はもう決めたんだから……怖くなんかない……」
-ELSEIF TALENT:TARGET:과묵함 || TALENT:TARGET:三無
+ELSEIF TALENT:TARGET:無口 || TALENT:TARGET:三無
 	PRINTFORML は無表情で群衆を見つめた…。
 ELSEIF TALENT:TARGET:浮躁 || TALENT:TARGET:暴躁 || TALENT:TARGET:大方
 	PRINTFORML は軽蔑的な表情で宣言した。
 	PRINTFORML 「クズども……これが済んだら、絶対にみんなを助けろよ……」
-ELSEIF TALENT:TARGET:元氣 ||TALENT:TARGET:낙천적 || TALENT:TARGET:活潑 || TALENT:TARGET:病嬌
+ELSEIF TALENT:TARGET:元氣 ||TALENT:TARGET:楽天家 || TALENT:TARGET:活潑 || TALENT:TARGET:病嬌
 	PRINTFORML は観客の期待に応えるために、キュートな笑顔を見せようとした。
-	PRINTFORML「皆さん、今夜は楽しい時間をお過ごしください♪　%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 皆様を満足させます❤」
+	PRINTFORML「皆さん、今夜は楽しい時間をお過ごしください♪　%PRINT_TRANSCALLNAME(TARGET)%は皆様を満足させます❤」
 ELSE
 	PRINTFORML は目の前の「スポンサー」たちに自己紹介をした…
 ENDIF
@@ -231,73 +231,73 @@ PRINTDATAW
 	DATAFORM 彼女は何も言わず、肉のような胴体を時おりくねらせては、興奮した蜜汁が糸のように垂れ落ちていた……
 ENDDATA
 
-PRINTFORML すぐに群衆が%조사처리(PRINT_TRANSCALLNAME(TARGET),"를")% 圧倒した。
-PRINTFORMW %PRINT_TRANSCALLNAME(TARGET)%의 身体は男性に媚びるために隅々まで使われる。
-PRINTFORML 口、乳房、下半身、しなやかな髪、すべてペニスに봉사한다ために使用されるのだった。
+PRINTFORML すぐに群衆が%PRINT_TRANSCALLNAME(TARGET)%を圧倒した。
+PRINTFORMW %PRINT_TRANSCALLNAME(TARGET)%の身体は男性に媚びるために隅々まで使われる。
+PRINTFORML 口、乳房、下半身、しなやかな髪、すべてペニスに奉仕するために使用されるのだった。
 SIF TALENT:乳頭穿環 == 5 && TALENT:陰蒂穿環 == 5
 	PRINTFORM 乳首、膣芯、陰唇を貫く太い鎖が激しく揺れ、
 SIF ISPENIS()
 	PRINTFORM 勃起した男根は脈動を続け、
-SIF TALENT:TARGET:모유체질 != 0 
+SIF TALENT:TARGET:母乳体質 != 0 
 	PRINTFORM 弄ばれる度に次々と母乳が噴き出し、
 IF ISFEMALE()
 	PRINTFORML 突き上げられるにしたがって、何の前触れもなく残った身体が何度も何度も締め付けられ、
-	PRINTFORML 질口から愛液と精液の混じった淫汁が逆噴出する。
+	PRINTFORML 膣口から愛液と精液の混じった淫汁が逆噴出する。
 ENDIF
-PRINTFORMW 全身が白い욕망に染まっていく…。
+PRINTFORMW 全身が白い欲望に染まっていく…。
 PRINTFORML 
 PRINTL ．．．
 PRINTL ．．．．
 PRINTL ．．．．．
-PRINTFORMW ゲストの욕망が一巡し、正式に処刑開始がアナウンスされた。
-PRINTFORML 息を呑む%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、かろうじて音のする方向に顔を向け、
+PRINTFORMW ゲストの欲望が一巡し、正式に処刑開始がアナウンスされた。
+PRINTFORML 息を呑む%PRINT_TRANSCALLNAME(TARGET)%は、かろうじて音のする方向に顔を向け、
 PRINTL 事前に聞かされていたとはいえ、思わず顔が青ざめてしまう。
 PRINTFORML キャスター付きの重い土台が、ステージの中央に押し出された。
 PRINTFORMW 中央には銀色に輝くピアスロッドが立っている。
 PRINTFORML 竹のように分割された棒の長さは2メートルほどで、棒の上部は蓮の花のつぼみのように膨らんでいる、
 PRINTFORML 6枚の刃が蕾の外側にぴったりとくっつき、鋭い刃が冷たい光を受けて輝く。竿の先端はむしろ滑らかである、
 PRINTFORML 軸の中央にはトレーがあり、太く長いディルドが垂直上向きに取り付けられている。
-PRINTFORMW 手足のない%조사처리(PRINT_TRANSCALLNAME(TARGET),"를")% 処刑するために製造された特別な装置だった。
+PRINTFORMW 手足のない%PRINT_TRANSCALLNAME(TARGET)%を処刑するために製造された特別な装置だった。
 PRINTL 
 PRINTL  「………………」
 
-IF TALENT:음란 || ABL:慾望 >= 3 || ABL:受虐狂 >= 3
-	PRINTFORML ショックからすぐに立ち直った%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 興奮した目を見せた。
+IF TALENT:淫乱 || ABL:慾望 >= 3 || ABL:受虐狂 >= 3
+	PRINTFORML ショックからすぐに立ち直った%PRINT_TRANSCALLNAME(TARGET)%は興奮した目を見せた。
 	PRINTFORML 思わず体を激しく揺さぶると、鎖がジャラジャラと鳴る。
-	PRINTFORM %SLANG_V(TARGET)%の中から淫液が湧き出%TALENT:모유체질 > 0 "し、乳頭からも乳が分泌される" ? "す" #%。
+	PRINTFORM %SLANG_V(TARGET)%の中から淫液が湧き出%TALENT:母乳体質 > 0 "し、乳頭からも乳が分泌される" ? "す" #%。
 ELSE
 	PRINTL 短い精神的ショックの後、
-	PRINTFORML 自分の最終的な運命を十分に理解していた%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、弱さを見せなかった。
+	PRINTFORML 自分の最終的な運命を十分に理解していた%PRINT_TRANSCALLNAME(TARGET)%は、弱さを見せなかった。
 	PRINTFORML 疲れきった目は涙に潤みながらも、「元・魔法少女」の最後の矜持として美しく輝いていた。
 ENDIF
-PRINTFORML そして%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 体をよじらせながら、最後の言葉を発した……
+PRINTFORML そして%PRINT_TRANSCALLNAME(TARGET)%は体をよじらせながら、最後の言葉を発した……
 PRINTDATAW
 	DATAFORM "皆様、魔法少女オナホ%PRINT_TRANSNAME(TARGET)%の死に様をお楽しみください"
-	DATAFORM "%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、皆様の前で人生を終えることができてとても幸せです…"
+	DATAFORM "%PRINT_TRANSCALLNAME(TARGET)%は、皆様の前で人生を終えることができてとても幸せです…"
 	DATAFORM "これより、%PRINT_TRANSNAME(TARGET)%の処刑が開始されます"
 	DATAFORM "肉家畜「%PRINT_TRANSNAME(TARGET)%」の淫らなアクメ死をお楽しみください。"
 ENDDATA
 PRINTL  《カチッ》
 PRINTL  「あ……」
-PRINTFORML スタッフの腕が%PRINT_TRANSCALLNAME(TARGET)%의 脇腹を抱え上げ、彼女を直立させて空中に持ち上げた。
-PRINTFORMW \@TALENT:거유 > 0 ? 重い胸袋を持っているにもかかわらず、 # \@手足のない体は\@TALENT:거유 > 0 ? それでも # \@風のように軽い。
+PRINTFORML スタッフの腕が%PRINT_TRANSCALLNAME(TARGET)%の脇腹を抱え上げ、彼女を直立させて空中に持ち上げた。
+PRINTFORMW \@TALENT:巨乳 > 0 ? 重い胸袋を持っているにもかかわらず、 # \@手足のない体は\@TALENT:巨乳 > 0 ? それでも # \@風のように軽い。
 
 PRINTFORML  「\@ABL:受虐狂 >= 3 ? ぁあ……ああぁ…… # \@……」
-PRINTFORML 男は%조사처리(PRINT_TRANSCALLNAME(TARGET),"를")% 腕に抱えて階段を登り、装置先端の「つぼみ」を浅く差し込んだ。
+PRINTFORML 男は%PRINT_TRANSCALLNAME(TARGET)%を腕に抱えて階段を登り、装置先端の「つぼみ」を浅く差し込んだ。
 PRINTFORML %SLANG_V(TARGET)%の中
 PRINTW 
-IF TALENT:음란 || ABL:慾望 >= 3 || ABL:受虐狂 >= 3
-	PRINTFORML 完全に발정している%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%、すぐに甘いうめき声を上げる。
+IF TALENT:淫乱 || ABL:慾望 >= 3 || ABL:受虐狂 >= 3
+	PRINTFORML 完全に発情している%PRINT_TRANSCALLNAME(TARGET)%は、すぐに甘いうめき声を上げる。
 	PRINTFORML %SLANG_LabiaMajora(TARGET)%を開かせ、死神の到来を迎え入れようとしている……
-	IF TALENT:모유체질 > 0
+	IF TALENT:母乳体質 > 0
 		PRINTFORM 滾々と湧き出す母乳や愛液が軸棒を滴り落ち、周囲に淫らな雌の臭いを撒き散らす。
 	ELSE
 		PRINTFORM 淫らな汁がシャフトに滴り落ちてゆく。
 	ENDIF
-	PRINTL 촉수 생물にとっては極上の餌、観客にとっては最高のスパイス……
+	PRINTL 触手生物にとっては極上の餌、観客にとっては最高のスパイス……
 ELSE
 	PRINTFORML 開発されきった肉体は理性を無視して動き、
-	PRINTFORML ぱっくり開いた%SLANG_LabiaMajora(TARGET)%がクラブヘッドを윤활に飲み込んでゆく……
+	PRINTFORML ぱっくり開いた%SLANG_LabiaMajora(TARGET)%がクラブヘッドを潤滑に飲み込んでゆく……
 ENDIF
 PRINTL 
 PRINT  「
@@ -319,16 +319,16 @@ PRINTDATA
 ENDDATA
 PRINTL ！？」
 PRINTL 
-PRINTFORML 男は意地悪く腕を上下させ、用%PRINT_TRANSCALLNAME(TARGET)%의 身体をピアスロッドに挿し込んで弄ぶ。
+PRINTFORML 男は意地悪く腕を上下させ、用%PRINT_TRANSCALLNAME(TARGET)%の身体をピアスロッドに挿し込んで弄ぶ。
 PRINTFORML 1cmずつ、ゆっくりと確実に、棒の先端を%SLANG_V(TARGET)%の奥を押し込んでゆく。
-PRINTFORMW %조사처리(PRINT_TRANSCALLNAME(TARGET),"가")%我慢できずに嬌声を漏らすと、ピアスロッドの先端が%SLANG_W(TARGET)%に近づいてくる
+PRINTFORMW %PRINT_TRANSCALLNAME(TARGET)%が我慢できずに嬌声を漏らすと、ピアスロッドの先端が%SLANG_W(TARGET)%に近づいてくる
 PRINTL 
 PRINTFORML  「っう？！……」
 PRINTFORML 子宮口を貫かれようとしたその瞬間、スタッフが突然%PRINT_TRANSCALLNAME(TARGET)%ロッドヘッドを取り外した。
 PRINTFORML 《おいどうした？》
 PRINTFORML 《何が起きるんだ？》
 PRINTFORML 観客のざわめきの中、
-PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%의 少し驚いた音声が通信装置の起動音と共に会場へ響くと、
+PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%の少し驚いた音声が通信装置の起動音と共に会場へ響くと、
 PRINTFORML 元々ピアスロッドの真ん中にあったディルドトレイがゆっくりと「つぼみ」に近い位置まで這い上がり、
 PRINTFORMW そして————
 PRINTL 
@@ -379,7 +379,7 @@ PRINTDATAL
 	DATAFORM 咯嘔咯呀啊啊啊啊啊啊！　嘎呀嘎啊！　嗯咕呀啊啊啊啊啊啊啊！」
 ENDDATA
 PRINTL 
-PRINTFORML 口中喷출혈沫、%PRINT_TRANSCALLNAME(TARGET)%长声惨叫、
+PRINTFORML 口中喷出血沫、%PRINT_TRANSCALLNAME(TARGET)%长声惨叫、
 PRINTFORML 在托盘开始下降的那一瞬间、「花苞」短暂地张开了一点点又合拢、
 PRINTFORML 锋利的刃瓣轻易地撕开了%SLANG_W(TARGET)%顶端的肉襞、向着腹腔之中前进、
 PRINTFORML 在观众们的欢呼喝彩之中
@@ -426,7 +426,7 @@ PRINTL
 PRINTFORML 腹中感到激烈残忍的疼痛、%PRINT_TRANSCALLNAME(TARGET)%却不停地達到高潮
 PRINTFORML %SLANG_V(TARGET)%緊緊包裹住竹節状的杆身不停蠕動着、
 PRINTFORML 似乎想要阻止身体的下沉。
-PRINTFORMW \@TALENT:모유체질 > 0 ? 奶水、 # \@淫液、尿水与鮮血一同流下、滋潤着冰冷的穿刺杆
+PRINTFORMW \@TALENT:母乳体質 > 0 ? 奶水、 # \@淫液、尿水与鮮血一同流下、滋潤着冰冷的穿刺杆
 PRINTL 
 PRINTFORML 「花苞」反覆地張合、一点一点地摧毀着%PRINT_TRANSCALLNAME(TARGET)%的器官
 PRINTFORML 小腸、肝臓、腎臓、胃袋、膈膜……都在刃瓣的開閤中被割得乱七八糟
@@ -448,7 +448,7 @@ PRINTDATAW
 ENDDATA
 PRINTW ————————————嘔咕！」
 PRINTL 
-PRINTFORML 抽搐着的%PRINT_TRANSCALLNAME(TARGET)%头颅高高扬起、口中喷출혈雾、
+PRINTFORML 抽搐着的%PRINT_TRANSCALLNAME(TARGET)%头颅高高扬起、口中喷出血雾、
 PRINTFORML 自下而上穿透咽喉的「花苞」、穿出%PRINT_TRANSCALLNAME(TARGET)%的口唇
 PRINTFORMW 刃鋒上飛濺的鮮血、像一朵妖豔的紅蓮花従%PRINT_TRANSCALLNAME(TARGET)%的身体内盛放！
 PRINTL 
@@ -490,17 +490,17 @@ SETCOLOR 180,0,0
 PRINTFORMW 失去四肢、無法継続戦闘的%PRINT_TRANSNAME(TARGET)%自願在処刑秀中被串刺殺死了
 RESETCOLOR
 CFLAG:0 = 9
-TALENT:TARGET:묘상화 = 0
-TALENT:TARGET:임신 = 0
-TALENT:TARGET:괴멸카운트 = 0
-LOCAL1 = (200000 + EXP:TARGET:매료경험 * 2000 + RAND(20000,50000))
-LOCAL2 = (50 + EXP:TARGET:매료경험 + RAND(30,60))
+TALENT:TARGET:苗床化 = 0
+TALENT:TARGET:妊娠 = 0
+TALENT:TARGET:毀滅倒計時 = 0
+LOCAL1 = (200000 + EXP:TARGET:魅了経験 * 2000 + RAND(20000,50000))
+LOCAL2 = (50 + EXP:TARGET:魅了経験 + RAND(30,60))
 MONEY += LOCAL1
 FLAG:200 += LOCAL2
 FLAG:853 += 200
 PRINTFORML 得到了{LOCAL1}$！
-PRINTFORML 得到了{LOCAL2}個촉수的残骸！
-PRINTFORML 인기도上升了200！
+PRINTFORML 得到了{LOCAL2}個触手的残骸！
+PRINTFORML 人気度上升了200！
 PRINTL  
 PRINTW
-;添加死亡TAG，取消묘상화TALENT防止出現在苗床出產判定中，取消임신TALENT防止出現在임신 판정中
+;添加死亡TAG，取消苗床化TALENT防止出現在苗床出產判定中，取消妊娠TALENT防止出現在妊娠判定中
