아유무 구상 엔딩 후일담 미출력 버그 수정

--- a/ERB/구상/固有キャラ専用口上/kojo_111_Ayumu.ERB
+++ b/ERB/구상/固有キャラ専用口上/kojo_111_Ayumu.ERB
@@ -8473,6 +8473,8 @@ PRINTFORMDL ……………………
 PRINTFORMDL …………
 PRINTFORMDL	……
 PRINTW
+;후일담 및 엔딩 일람
+CALL KOJO_111_ENDSTORY
 
 
 @KOJO_111_BATTLE_END_RESCUE
@@ -13633,7 +13635,7 @@ IF CFLAG:902 == 28
 	PRINTFORML 「오늘도 %PRINT_TRANSCALLNAME(TARGET)%랑 기분 좋은거 하자………」
 	PRINTW
 	SIF CFLAG:230 == -3
-		PRINTFORMDL 사랑하는 아이를 품고 있는 자신의 배를 쓰다듬으며,
+		PRINTFORMDL 사랑하는 아이를 품고 있는 자신의 배를 쓰다듬으며, 
 	PRINTFORMDL %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 그렇게 자신의 동생에게 달콤하게 속삭였다……
 	PRINTW
 	PRINTFORMD 　　　　　　　　―― Ending No.111 G (
